k8s/elk/kibana-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elk-kibana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: kibana.k8s.tools.threeq.com
    http:
      paths:
      - path: /
        backend:
          serviceName: elk-kibana
          servicePort: 80
